--- a/WardrobeMVC2/Views/Tops/Edit.cshtml
+++ b/WardrobeMVC2/Views/Tops/Edit.cshtml
@@ -25,13 +25,13 @@
             </div>
         </div>
 
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.TopPhoto, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.TopPhoto, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.TopPhoto, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
             @Html.LabelFor(model => model.TopColor, htmlAttributes: new { @class = "control-label col-md-2" })
