--- a/WardrobeMVC2/Views/Bottoms/Index.cshtml
+++ b/WardrobeMVC2/Views/Bottoms/Index.cshtml
@@ -4,18 +4,15 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Paiges Bottoms ~</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
 <table class="table">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.BottomName)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.BottomPhoto)
+            @Html.DisplayNameFor(model => model.BottomType.TypeName)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.BottomColor)
@@ -25,10 +22,7 @@
         </th>
         <th>
             @Html.DisplayNameFor(model => model.BottomOccasion)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.BottomType.TypeName)
-        </th>
+        </th>     
         <th></th>
     </tr>
 
@@ -38,7 +32,7 @@
             @Html.DisplayFor(modelItem => item.BottomName)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.BottomPhoto)
+            @Html.DisplayFor(modelItem => item.BottomType.TypeName)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.BottomColor)
@@ -48,12 +42,8 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.BottomOccasion)
-        </td>
+        </td>    
         <td>
-            @Html.DisplayFor(modelItem => item.BottomType.TypeName)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.BottomID }) |
             @Html.ActionLink("Details", "Details", new { id=item.BottomID }) |
             @Html.ActionLink("Delete", "Delete", new { id=item.BottomID })
         </td>
