--- a/WardrobeMVC2/Views/Accessories/Index.cshtml
+++ b/WardrobeMVC2/Views/Accessories/Index.cshtml
@@ -6,48 +6,29 @@
 
 <h2>Paiges Accessories ~</h2>
 
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.AccessoryName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.AccessoryType.TypeName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.AccessoryColor)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.AccessorySeason)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.AccessoryOccasion)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
+@foreach (var item in Model)
+{
+    <div class="col-md-4" style="border:dotted;">
+        <h3>
             @Html.DisplayFor(modelItem => item.AccessoryName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.AccessoryType.TypeName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.AccessoryColor)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.AccessorySeason)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.AccessoryOccasion)
-        </td>
-        <td>
-            @Html.ActionLink("Details", "Details", new { id=item.AccessoryID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.AccessoryID })
-        </td>
-    </tr>
+        </h3>
+        <h3>
+            Type: @Html.DisplayFor(modelItem => item.AccessoryType.TypeName)
+        </h3>
+        <h3>
+            Color: @Html.DisplayFor(modelItem => item.AccessoryColor)
+        </h3>
+        <h3>
+            Season: @Html.DisplayFor(modelItem => item.AccessorySeason)
+        </h3>
+        <h3>
+            Occasion: @Html.DisplayFor(modelItem => item.AccessoryOccasion)
+        </h3>
+        <h4>
+            @Html.ActionLink("Details", "Details", new { id = item.AccessoryID }) |
+            @Html.ActionLink("Delete", "Delete", new { id = item.AccessoryID })
+        </h4>
+    </div>
 }
 
-</table>
+
