--- a/WardrobeMVC2/Views/Bottoms/Details.cshtml
+++ b/WardrobeMVC2/Views/Bottoms/Details.cshtml
@@ -10,45 +10,31 @@
     <h4>Bottom</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.BottomName)
-        </dt>
-
         <dd>
-            @Html.DisplayFor(model => model.BottomName)
+            <img src="@Html.DisplayFor(model => model.BottomPhoto)" /> 
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.BottomType.TypeName)
-        </dt>
-
         <dd>
-            @Html.DisplayFor(model => model.BottomType.TypeName)
+            Name: @Html.DisplayFor(model => model.BottomName)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.BottomColor)
-        </dt>
-
         <dd>
-            @Html.DisplayFor(model => model.BottomColor)
+            Type: @Html.DisplayFor(model => model.BottomType.TypeName)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.BottomSeason)
-        </dt>
-
         <dd>
-            @Html.DisplayFor(model => model.BottomSeason)
+            Color: @Html.DisplayFor(model => model.BottomColor)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.BottomOccasion)
-        </dt>
+        <dd>
+            Season: @Html.DisplayFor(model => model.BottomSeason)
+        </dd>
 
         <dd>
-            @Html.DisplayFor(model => model.BottomOccasion)
+            Occassion: @Html.DisplayFor(model => model.BottomOccasion)
         </dd>
+
+        @*Took out all <dt> so it wasnt super ugly*@
 
     </dl>
 </div>
