--- a/WardrobeMVC2/Views/Shoes/Details.cshtml
+++ b/WardrobeMVC2/Views/Shoes/Details.cshtml
@@ -10,45 +10,30 @@
     <h4>Sho</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.ShoeName)
-        </dt>
-
         <dd>
-            @Html.DisplayFor(model => model.ShoeName)
+            <img src="@Html.DisplayFor(model => model.ShoePhoto)" />
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.ShoeType.TypeName)
-        </dt>
-
         <dd>
-            @Html.DisplayFor(model => model.ShoeType.TypeName)
+            Name: @Html.DisplayFor(model => model.ShoeName)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.ShoeColor)
-        </dt>
-
         <dd>
-            @Html.DisplayFor(model => model.ShoeColor)
+            Type: @Html.DisplayFor(model => model.ShoeType.TypeName)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.ShoeSeason)
-        </dt>
-
         <dd>
-            @Html.DisplayFor(model => model.ShoeSeason)
+            Color: @Html.DisplayFor(model => model.ShoeColor)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.ShoeOccasion)
-        </dt>
+        <dd>
+            Season: @Html.DisplayFor(model => model.ShoeSeason)
+        </dd>
 
         <dd>
-            @Html.DisplayFor(model => model.ShoeOccasion)
-        </dd> 
+            Occassion: @Html.DisplayFor(model => model.ShoeOccasion)
+        </dd>
+
 
     </dl>
 </div>
